# crazy-paths

./: .gitignore  README.md  crazy_paths.py  pyproject.toml  requirements.txt  tsuru.py
utils/: geom.py
